--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
+    "ali-oss": "^6.10.0",
+    "circular-json": "^0.5.9",
+    "moment": "^2.23.0",
+    "mysql2": "^3.12.0",
+    "mz": "^2.7.0",
+    "antd": "^5.22.3",
+    "sass": "^1.83.0",
     "eslint-config-next": "14.2.22"
   }
 }
