--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mysql": "^2.18.1",
+    "next": "14.2.22",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.22"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@ant-design/nextjs-registry": "^1.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
     "ali-oss": "^6.10.0",
+    "antd": "^5.22.3",
     "circular-json": "^0.5.9",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.22",
     "moment": "^2.23.0",
     "mysql2": "^3.12.0",
     "mz": "^2.7.0",
-    "antd": "^5.22.3",
+    "postcss": "^8",
     "sass": "^1.83.0",
-    "eslint-config-next": "14.2.22"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
